--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+body {
+    width: 1000px;
+    justify-content: center;
+    margin: auto;
+}
+
+#totalBoby {
+    width: 1000px;
+}
+
 #countriesSelectorWrapper {
     display: grid;
     align-items: center;
@@ -15,7 +25,7 @@
 #forAfter {
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 80vw;
+    width: 100%;
     margin-top: 5px;
 }
 
@@ -26,7 +36,7 @@
     font-family: 'Montserrat', sans-serif;
     color: #444444;
     cursor: pointer;
-    width: 80vw;
+    width: 100%;
     height: 30px;
     border: none;
     border-radius: 0.3125rem;
@@ -53,7 +63,7 @@
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    width: 80vw;
+    width: 45%;
 }
 
 .show {
@@ -67,13 +77,17 @@
     margin-left: -25px;
 }
 
+#countriesSelectorWrapper {
+    width: 100%;
+}
+
 #countriesSelector {
     display: grid;
     grid-template-columns: repeat(2, 50%);
     margin-left: 1vw;
     max-height: 250px;
     height: 250px;
-    width: 80vw;
+    width: 100%;
     overflow: scroll;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -113,7 +127,7 @@
 
 #categorySelector {
     border-radius: 5px;
-    width: 80vw;
+    width: 100%;
     height: fit-content;
     min-height: 25px;
     grid-column: 2;
@@ -141,7 +155,34 @@
 #indicatorsSelector {
     border-radius: 5px;
     border: 1px solid #ccc;
-    width: 80vw;
+    width: 100%;
+    height: fit-content;
+    min-height: 25px;
+    grid-column: 2;
+}
+
+#yearsSelectorWrapper {
+    display: grid;
+    grid-column: 1;
+    grid-row: 3;
+    align-items: center;
+    grid-template-columns: 15% 85%;
+}
+
+#yearsSelectorWrapper p {
+    grid-column: 1;
+    grid-row: 1;
+    /* font: 14px 'sansBold'; */
+    color: #444444;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#yearsSelector {
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 100%;
     height: fit-content;
     min-height: 25px;
     grid-column: 2;
@@ -166,4 +207,30 @@
 #lineBlock .line {
     pointer-events: none;
     width: 5px;
+}
+
+#downloadButtonDiv {
+    display: grid;
+    grid-template-columns: auto;
+}
+
+#downloadButton {
+    background-color: #fff;
+    width: 25vw;
+    height: 40px;
+    margin-left: 40;
+    border-radius: 5px;
+    border: solid 1px #ccc;
+    justify-content: center;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+}
+
+#downloadButton:active {
+    background-color: #a7cc33;
+}
+
+#downloadButton:hover {
+    background-color: #a7cc33;
 }
