--- a/css/style.css
+++ b/css/style.css
@@ -188,10 +188,22 @@ body {
     grid-column: 2;
 }
 
-#barBlockWrapper {}
+#barBlockWrapper {
+    margin-bottom: 25px;
+}
 
 #barBlock {
     height: 500px;
+}
+
+#scatterBlock {
+    width: 100%;
+    height: 400px;
+    position: relative;
+}
+
+#scatterBlock .tooltip {
+    position: absolute;
 }
 
 #lineBlock {
