--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
-    width: 1000px;
+    width: 95%;
     justify-content: center;
     margin: auto;
 }
 
 #totalBoby {
-    width: 800px;
+    width: 100%;
 }
 
 #countriesSelectorWrapper {
@@ -63,7 +63,7 @@ body {
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    width: 45%;
+    width: 80%;
 }
 
 .show {
@@ -87,7 +87,6 @@ body {
     margin-left: 1vw;
     max-height: 250px;
     height: 250px;
-    width: 100%;
     overflow: scroll;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -105,6 +104,10 @@ body {
     color: #444444;
     font-size: 14px;
     font-family: 'Montserrat', sans-serif;
+}
+
+#selectedButtons {
+    margin-top: 10px;
 }
 
 .selectButtons {
@@ -216,6 +219,7 @@ body {
 
 #barBlock {
     height: 500px;
+    margin-bottom: 25px;
 }
 
 #scatterBlock {
@@ -250,17 +254,24 @@ body {
 }
 
 #legend_block {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-flow: row;
+    margin-bottom: 1vh;
     width: fit-content;
     align-self: center;
-    grid-auto-flow: column;
     align-items: center;
-    grid-row: 5;
-    grid-column-start: 1;
-    grid-column-end: -1;
+}
+
+#legend_block div {
+    margin-bottom: 0px;
 }
 
 #legend_block div p {
-    font: 14px 'serifRegular';
+    font: 10px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #downloadButtonDiv {
