--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+@media (max-width: 699px) {
+    #categorySelectorWrapper {
+        display: block !important;
+    }
+    #indicatorsSelectorWrapper {
+        display: block !important;
+    }
+    #yearsSelectorWrapper {
+        display: block !important;
+    }
+    #countriesSelectorWrapper {
+        display: block !important;
+        margin-bottom: 25px !important;
+    }
+    #legend_block {
+        grid-template-columns: repeat(1, 1fr) !important;
+    }
+    #downloadButton {
+        width: 80vw !important;
+        margin: auto;
+    }
+}
+
 body {
     width: 95%;
     justify-content: center;
